Refactor page filenames and remove motion from AboutMe

--- a/src/components/displays/displayStyles.css
+++ b/src/components/displays/displayStyles.css
@@ -3,6 +3,9 @@
     border-radius: 20px;
     width: 40%;
     gap: 30px;
+    position: absolute;
+    top: 20%;
+    left: 10%;
 }
 
 #iconDisplay {
