--- a/src/style.css
+++ b/src/style.css
@@ -14,15 +14,15 @@
 p,
 a,
 li {
-    font-size: 15px;
+    font-size: 1.6vh;
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 5vh;
     text-align: center;
 }
 h2 {
-    font-size: 35px;
+    font-size: 3vh;
     margin-bottom: 0px;
 }
 
